tests/testfiles/validated/invalid_programs/617_2_else_error.c
int main() { 
  int x =(5==6);
  int y = 10;
  if (x >6) {
    y=7
  }
  else{
    x = 1000;
  }
  else {
    x=10;
  }
  return x;
  
}
